# GitHub-MCP-Agent

./: .env.example  LICENSE  README.md  agent_local.py  cli.py  pyproject.toml  requirements.txt  run.sh  system_prompt.txt  tools.py
github_mcp_agent/: agent.py  cli.py  setup_wizard.py  tools.py
github_mcp_agent/providers/: __init__.py  anthropic.py  bedrock.py  copilot.py  gemini.py  ollama.py  openai.py
