[project]
name = "github-mcp-agent"
version = "0.1.0"
description = "A GitHub AI agent powered by AWS Bedrock and MCP"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "strands-agents",
    "mcp",
    "rich",
    "python-dotenv",
    "questionary",
    "anthropic",
    "litellm",
]

[project.scripts]
github-agent = "github_mcp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_mcp_agent"]

[tool.hatch.build.targets.wheel.sources]
"github_mcp_agent" = "github_mcp_agent"
