[project]
name = "github-agent"
version = "0.2.0"
description = "Talk to your GitHub repos, issues, and project boards in plain English from your terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Omar Hany", email = "omarhanyabbas2004@gmail.com" }]
keywords = ["github", "ai", "agent", "mcp", "cli", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/OmarCodes022/GitHub-MCP-Agent"
Repository = "https://github.com/OmarCodes022/GitHub-MCP-Agent"
Issues = "https://github.com/OmarCodes022/GitHub-MCP-Agent/issues"

dependencies = [
    "boto3",
    "strands-agents",
    "mcp",
    "rich",
    "python-dotenv",
    "questionary",
    "anthropic",
    "litellm",
    "click",
]

[project.scripts]
github-agent = "github_mcp_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_mcp_agent"]

[tool.hatch.build.targets.wheel.sources]
"github_mcp_agent" = "github_mcp_agent"
